# text_client

./: .gitignore  README.md  pyproject.toml
text_client/: chat_core.py  nlip_client.py  nlip_text_client.py
