[tool.poetry]
name = "text-client"
version = "0.1.0"
description = ""
authors = ["Dinesh Verma <dverma@us.ibm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nlip-sdk = {path = "../nlip_sdk", develop = true}
nlip-client = {path = "../nlip_client", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
